edited styling, fixed overflow issues

--- a/studytrack/src/components/Dashboard/Dashboard.css
+++ b/studytrack/src/components/Dashboard/Dashboard.css
@@ -63,7 +63,7 @@
     font-weight: 300;
     font-size: 30px;
     text-align: left;
-    margin: 50px 0 30px 20px;
+    margin: 50px 0 30px;
 }
 
 .ant-layout.ant-layout-has-sider > .ant-layout,
